--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,15 @@
 version: "3"
 services:
   nginx:
-    build: ./nginx
+    # build: ./nginx
+    image: nginx:latest
     ports:
       - 5050:80
       - 6600:79
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
       - ./app:/var/www/php
+      - ./nginx/angular/my-portfolio/dist/out:/var/www/html
     depends_on:
       - php
       - angular
@@ -22,10 +24,15 @@ services:
 
   angular:
     build: ./nginx/angular/my-portfolio
+    volumes:
+      - ./nginx/angular/my-portfolio/dist/out:/var/www/html
+    # command: npm run build -- --output-path=./dist/out --configuration production
     environment:
       TZ: "Asia/Tokyo"
     depends_on:
       - db
+    tty: true
+    stdin_open: true
 
   db:
     image: mysql:5.7
@@ -39,7 +46,7 @@ services:
   phpmyadmin:
     image: phpmyadmin/phpmyadmin:latest
     ports:
-      - 8888:80
+      - 8899:80
     depends_on:
       - db
 volumes:
