--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -15,8 +15,10 @@ server {
     location ~ \.php$ {
         fastcgi_pass php:9000;
         fastcgi_index index.php;
-        fastcgi_param SCRIPT_FILENAME  $document_root$fastcgi_script_name;
+
         include       fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME  $document_root$fastcgi_script_name;
+        fastcgi_param  PATH_INFO $fastcgi_path_info;
     }
 }
 server {
